--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App-header {
+  background-color: #000;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
+.card-body {
+  --bs-card-spacer-y: 2rem;
+  --bs-card-spacer-x: 2rem;
+}
+
+.btn-primary {
+  --bs-btn-bg: #590249;
+  --bs-btn-hover-bg: #590249;
+}
